// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`markdown-di CLI - Integration Tests Build Operations builds single file successfully 1`] = `
"---
name: "simple-document"
description: "A simple document"
blueprints:
  sections:
    intro: "sections/intro.md"
---

# Simple Document

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## More Content

Additional content here.
"
`;

exports[`markdown-di CLI - Integration Tests Build Operations builds single file successfully 2`] = `[]`;

exports[`markdown-di CLI - Integration Tests Build Operations builds single file successfully 3`] = `
{
  "blueprints": {
    "sections": {
      "intro": "sections/intro.md",
    },
  },
  "description": "A simple document",
  "name": "simple-document",
}
`;

exports[`markdown-di CLI - Integration Tests Build Operations builds single file successfully 4`] = `
"---
name: "simple-document"
description: "A simple document"
blueprints:
  sections:
    intro: "sections/intro.md"
---

# Simple Document

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## More Content

Additional content here.
"
`;

exports[`markdown-di CLI - Integration Tests Build Operations builds complex document with multiple dependencies 1`] = `
"---
name: "main-documentation"
description: "Main documentation file"
blueprints:
  sections:
    conclusion: "../sections/conclusion.md"
    intro: "../sections/intro.md"
references:
  guides:
    - ../guides/*.md
---

# Complete Documentation

{{sections.intro}}

## Core Content

This is the main content of the documentation.

## Related Guides

{{references.guides}}

{{sections.conclusion}}
"
`;

exports[`markdown-di CLI - Integration Tests Build Operations builds complex document with multiple dependencies 2`] = `
[
  {
    "location": "blueprints.sections.intro",
    "message": "Blueprint file not found: ../sections/intro.md",
    "type": "file",
  },
  {
    "location": "blueprints.sections.conclusion",
    "message": "Blueprint file not found: ../sections/conclusion.md",
    "type": "file",
  },
  {
    "location": "references.guides",
    "message": "No files found matching pattern: ../guides/*.md",
    "type": "file",
  },
  {
    "location": "line 14, column 0",
    "message": "Failed to process reference: Error: Failed to read blueprint file /Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/sections/conclusion.md: Error: ENOENT: no such file or directory, open '/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/sections/conclusion.md'",
    "type": "file",
  },
  {
    "location": "line 12, column 0",
    "message": "Failed to process reference: Error: Failed to read reference file /Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/guides/*.md: Error: ENOENT: no such file or directory, open '/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/guides/*.md'",
    "type": "file",
  },
  {
    "location": "line 4, column 0",
    "message": "Failed to process reference: Error: Failed to read blueprint file /Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/sections/intro.md: Error: ENOENT: no such file or directory, open '/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/sections/intro.md'",
    "type": "file",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Build Operations builds complex document with multiple dependencies 3`] = `[]`;

exports[`markdown-di CLI - Integration Tests Build Operations builds complex document with multiple dependencies 4`] = `
"---
name: "main-documentation"
description: "Main documentation file"
blueprints:
  sections:
    conclusion: "../sections/conclusion.md"
    intro: "../sections/intro.md"
references:
  guides:
    - ../guides/*.md
---

# Complete Documentation

{{sections.intro}}

## Core Content

This is the main content of the documentation.

## Related Guides

{{references.guides}}

{{sections.conclusion}}
"
`;

exports[`markdown-di CLI - Integration Tests Build Operations reports build errors for invalid files 1`] = `
[
  {
    "location": "line 5, column 0",
    "message": "Reference "{{undefined.reference}}" is not declared in frontmatter",
    "type": "reference",
  },
  {
    "location": "blueprints.sections.missing",
    "message": "Blueprint file not found: ../sections/does-not-exist.md",
    "type": "file",
  },
  {
    "location": "line 4, column 0",
    "message": "Failed to process reference: Error: Failed to read blueprint file /Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/sections/does-not-exist.md: Error: ENOENT: no such file or directory, open '/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/sections/does-not-exist.md'",
    "type": "file",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Build Operations handles files with no dependencies 1`] = `
"---
name: "standalone-document"
description: "Document without dependencies"
---

# Standalone Document

This document has no dependencies.

## Content

Just regular markdown content.
"
`;

exports[`markdown-di CLI - Integration Tests Build Operations handles files with no dependencies 2`] = `[]`;

exports[`markdown-di CLI - Integration Tests Build Operations handles files with no dependencies 3`] = `[]`;

exports[`markdown-di CLI - Integration Tests Build Operations handles files with no dependencies 4`] = `
"---
name: "standalone-document"
description: "Document without dependencies"
---

# Standalone Document

This document has no dependencies.

## Content

Just regular markdown content.
"
`;

exports[`markdown-di CLI - Integration Tests Validation Operations validates single file successfully 1`] = `[]`;

exports[`markdown-di CLI - Integration Tests Validation Operations validates single file successfully 2`] = `
{
  "blueprints": {
    "sections": {
      "intro": "sections/intro.md",
    },
  },
  "description": "A simple document",
  "name": "simple-document",
}
`;

exports[`markdown-di CLI - Integration Tests Validation Operations validates and reports errors 1`] = `
[
  {
    "location": "line 5, column 0",
    "message": "Reference "{{undefined.reference}}" is not declared in frontmatter",
    "type": "reference",
  },
  {
    "location": "blueprints.sections.missing",
    "message": "Blueprint file not found: ../sections/does-not-exist.md",
    "type": "file",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Validation Operations validates document structure 1`] = `
[
  {
    "location": "frontmatter",
    "message": "Required field "description" is missing or invalid",
    "type": "frontmatter",
  },
  {
    "location": "line 4, column 0",
    "message": "Reference "{{sections.intro}}" is not declared in frontmatter",
    "type": "reference",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Validation Operations validates undefined references 1`] = `
[
  {
    "location": "line 5, column 0",
    "message": "Reference "{{sections.undefined}}" is not declared in frontmatter",
    "type": "reference",
  },
  {
    "location": "line 6, column 0",
    "message": "Reference "{{something.random}}" is not declared in frontmatter",
    "type": "reference",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios processes document with nested blueprints and references 1`] = `
"---
name: "complex-index"
description: "Complex project index"
blueprints:
  sections:
    conclusion: "sections/conclusion.md"
    intro: "sections/intro.md"
references:
  guides:
    - guides/*.md
---

# Project Index

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## Guides

{{references.guides}}

---
name: conclusion-section
description: Conclusion section
---

# Conclusion

Thank you for reading. This concludes the documentation.

"
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios processes document with nested blueprints and references 2`] = `
[
  {
    "location": "line 8, column 0",
    "message": "Failed to process reference: Error: Failed to read reference file /Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/guides/*.md: Error: ENOENT: no such file or directory, open '/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/guides/*.md'",
    "type": "file",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios processes document with nested blueprints and references 3`] = `
[
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/sections/intro.md",
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/sections/conclusion.md",
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/guides/advanced.md",
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/guides/getting-started.md",
]
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios processes document with nested blueprints and references 4`] = `
"---
name: "complex-index"
description: "Complex project index"
blueprints:
  sections:
    conclusion: "sections/conclusion.md"
    intro: "sections/intro.md"
references:
  guides:
    - guides/*.md
---

# Project Index

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## Guides

{{references.guides}}

---
name: conclusion-section
description: Conclusion section
---

# Conclusion

Thank you for reading. This concludes the documentation.

"
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios handles documents with mixed content types 1`] = `
"---
name: "mixed-content"
description: "Document with various markdown elements"
blueprints:
  sections:
    intro: "sections/intro.md"
---

# Mixed Content Document

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## Code Example

\`\`\`javascript
const example = "Hello World";
console.log(example);
\`\`\`

## Table

| Column 1 | Column 2 |
|----------|----------|
| Value 1  | Value 2  |

## List

- Item 1
- Item 2
  - Nested item
- Item 3

> **Note:** This is a blockquote.
"
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios handles documents with mixed content types 2`] = `[]`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios preserves markdown formatting and structure 1`] = `
"---
name: "formatted-doc"
description: "Document with specific formatting"
blueprints:
  sections:
    conclusion: "sections/conclusion.md"
---

# Title with **Bold** and *Italic*

This is a paragraph with [a link](https://example.com).

## Subsection

Content here with \`inline code\`.

---
name: conclusion-section
description: Conclusion section
---

# Conclusion

Thank you for reading. This concludes the documentation.


### Deeper Heading

Final content.
"
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios preserves markdown formatting and structure 2`] = `
"---
name: "formatted-doc"
description: "Document with specific formatting"
blueprints:
  sections:
    conclusion: "sections/conclusion.md"
---

# Title with **Bold** and *Italic*

This is a paragraph with [a link](https://example.com).

## Subsection

Content here with \`inline code\`.

---
name: conclusion-section
description: Conclusion section
---

# Conclusion

Thank you for reading. This concludes the documentation.


### Deeper Heading

Final content.
"
`;

exports[`markdown-di CLI - Integration Tests Edge Cases handles empty frontmatter gracefully 1`] = `
[
  {
    "location": "document start",
    "message": "No frontmatter found in document",
    "type": "frontmatter",
  },
  {
    "location": "frontmatter",
    "message": "Required field "name" is missing or invalid",
    "type": "frontmatter",
  },
  {
    "location": "frontmatter",
    "message": "Required field "description" is missing or invalid",
    "type": "frontmatter",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Edge Cases handles missing files in dependencies 1`] = `
[
  {
    "location": "blueprints.sections.nonexistent",
    "message": "Blueprint file not found: sections/does-not-exist.md",
    "type": "file",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Edge Cases handles malformed reference syntax 1`] = `
[
  {
    "location": "line 5, column 0",
    "message": "Invalid characters in reference: "invalid{nested"",
    "type": "syntax",
  },
  {
    "location": "line 6, column 0",
    "message": "Invalid reference format: "too.many.levels.here.really" (expected: {{group.key}} or {{section.group.key}})",
    "type": "syntax",
  },
  {
    "location": "line 5, column 0",
    "message": "Reference "{{invalid{nested}}" is not declared in frontmatter",
    "type": "reference",
  },
  {
    "location": "line 6, column 0",
    "message": "Reference "{{too.many.levels.here.really}}" is not declared in frontmatter",
    "type": "reference",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Edge Cases handles documents with special characters 1`] = `
"---
name: "special-chars"
description: "Document with special characters"
blueprints:
  sections:
    intro: "sections/intro.md"
---

# Special Characters Test

This document contains special characters: é, ñ, ü, 中文, 日本語

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.

"
`;

exports[`markdown-di CLI - Integration Tests Edge Cases handles documents with special characters 2`] = `[]`;
